--- a/src/App.css
+++ b/src/App.css
@@ -1,42 +1,30 @@
-#root {
-  max-width: 1280px;
-  margin: 0 auto;
-  padding: 2rem;
-  text-align: center;
-}
+@import "tailwindcss";
 
-.logo {
-  height: 6em;
-  padding: 1.5em;
-  will-change: filter;
-  transition: filter 300ms;
-}
-.logo:hover {
-  filter: drop-shadow(0 0 2em #646cffaa);
-}
-.logo.react:hover {
-  filter: drop-shadow(0 0 2em #61dafbaa);
-}
+table {
+    @apply w-full bg-white rounded-lg;
+    @apply overflow-x-auto;
 
-@keyframes logo-spin {
-  from {
-    transform: rotate(0deg);
+    > thead {
+      tr {
+        @apply border-b border-b-gray-300 text-nowrap;
+
+        th {
+          @apply text-gray-700 font-semibold text-sm p-2 text-center border-l border-l-gray-300 overflow-hidden whitespace-nowrap text-ellipsis;
+          &:first-of-type {
+            @apply border-none;
+          }
+        }
+      }
+    }
+    tbody {
+      tr {
+        @apply border-b border-b-gray-300 text-nowrap;
+        td {
+          @apply text-black font-semibold text-sm text-center p-2 border-l border-l-gray-300 overflow-hidden whitespace-nowrap text-ellipsis  ;
+          &:first-of-type {
+            @apply border-none;
+          }
+        }
+      }
+    }
   }
-  to {
-    transform: rotate(360deg);
-  }
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  a:nth-of-type(2) .logo {
-    animation: logo-spin infinite 20s linear;
-  }
-}
-
-.card {
-  padding: 2em;
-}
-
-.read-the-docs {
-  color: #888;
-}
